--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.headerSection{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+ 
+ align-items: center;
+  padding: 10px;
+  gap: 30px;
+  background-color: black;
   color: white;
+  padding-top: 10px;
 }
+.center ul li{
+list-style: none;
+display: inline-flex;
+margin: 0px 10px;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title{
+  font-size: 1rem;
+}
+.left{
+  flex: 2;
+}
+.center{
+  flex: 4;
+  
+}
+.search{
+  flex: 2;
+}
+.right{
+  flex: 4;
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 10px;
+}
+.bannerbox{
+  margin: 10px 0px;
+}
+.bannerbox img{
+  width: 100%;
+}
+.menImages{
+  display: flex;
+  gap: 10px;
+}
+.menImages img{
+  height: 220px;
+  width: 220px;
+  
+}
+.search input{
+  padding: 10px;
+  width: 20rem;
+  border-radius: 5px;
 }
